tests/core/e2e/app-dir/next-config-ts/type-error/next.config.ts
import type { NextConfig } from 'next';

// type error
const foo: number = 'foo';

const nextConfig: NextConfig = {
	env: {
		foo,
	},
};

export default nextConfig;
